# freeswitch

./: .gitmodules  CMakeLists.txt  Makefile.am  bootstrap.sh  configure.ac  configure.in  freeswitch.spec  mkrelease.sh
conf/: freetdm.conf.xml
conf/testing/autoload_configs/: conference.conf.xml  conference_layouts.conf.xml
conf/testing/dialplan/default/: 0019_conf.xml
conf/vanilla/autoload_configs/: amqp.conf.xml  baresip.conf.xml  modules.conf.xml
conf/vanilla/sip_profiles/: internal.xml
debian/: bootstrap.sh  control-modules  rules
html5/verto/js/: Makefile  README  package.json
html5/verto/js/src/: jquery.FSRTC.js  jquery.verto.es6_wrapper.js  jquery.verto.js
html5/verto/verto_communicator/: bower.json
html5/verto/video_demo/: index.html  verto.js
libs/: .gitignore
libs/apr/: apr-config.out  configure.in
libs/apr-util/crypto/: getuuid.c
libs/apr-util/include/: apr_queue.h
libs/apr-util/misc/: apr_queue.c
libs/apr/include/: apr_pools.h
libs/apr/strings/: apr_snprintf.c
libs/freetdm/mod_freetdm/: mod_freetdm.c
libs/freetdm/src/: ftdm_io.c
libs/libblade/: .gitignore  Makefile.am  Makefile.in  README  configure.ac
libs/libblade/src/: bpcp.c
libs/libblade/src/include/: blade.h  blade_peer.h
libs/libblade/test/: Makefile  Makefile.am  Makefile.in  testbuild  testbuild.c
libs/libks/: .gitignore  Makefile  Makefile.am  a.out  configure.ac  libks.props  libks.sln  libks.vcxproj  libks.vcxproj.filters  test.c  wtf
libs/libks/src/: dht.c  ks.c  ks_bencode.c  ks_buffer.c  ks_config.c  ks_dht.c  ks_dso.c  ks_hash.c  ks_json.c  ks_mpool.c  ks_mutex.c  ks_pool.c  ks_printf.c  ks_q.c  ks_rng.c  ks_socket.c  ks_ssl.c  ks_string.c  ks_thread.c  ks_threadmutex.c  ks_time.c  kws.c  mpool.c  simclist.c  table.c  table_util.c
libs/libks/src/include/: cc.h  dht.h  ks.h  ks_config.h  ks_dht.h  ks_hash.h  ks_json.h  ks_mpool.h  ks_mpool_loc.h  ks_platform.h  ks_pool.h  ks_printf.h  ks_q.h  ks_rng.h  ks_socket.h  ks_ssl.h  ks_threadmutex.h  ks_time.h  ks_types.h  kws.h  mpool.h  mpool_loc.h  table.h  table_loc.h
libs/libks/test/: .gitignore  Makefile.am  dht-example.c  testdht.c  testhash.c  testhash.vcxproj  testpools.c  testpools.vcxproj  testq.c  testq.vcxproj  testsock.c  testsock.vcxproj  testsock2  testsock2.c  testtable.c  testthreadmutex.c  testthreadmutex.vcxproj  testtime.c  testtime.vcxproj  testwebsock.c
libs/libks/test/testpools/: Makefile.am  testpools.c  testpools.vcxproj  testpools.vcxproj.filters
libs/libks/test/testtable/: Makefile.am  testtable.c
mod_freetdm/: CMakeLists.txt  Makefile.in  mod_freetdm.c  mod_freetdm.h  tdm.c  tdm_transparent.c
public_freeswitch/: sangoma-FS-1.6.patch
sample/run_mtp2/: run_mtp2.c  run_mtp2.h  run_mtp2_test.c
scripts/: FreeSWITCH-debian-raspbian-installer.sh  freeswitch.pkg_deps.sh
src/: ftdm_io.c  ftdm_sched.c  ftdm_threadmutex.c  libteletone_generate.c  switch_apr.c  switch_atomic.c  switch_console.c  switch_core.c  switch_core_codec.c  switch_core_hash.c  switch_core_io.c  switch_core_media.c  switch_core_memory.c  switch_core_sqldb.c  switch_core_video.c  switch_event.c  switch_ivr.c  switch_ivr_async.c  switch_ivr_play_say.c  switch_jitterbuffer.c  switch_limit.c  switch_list.c  switch_msrp.c  switch_pgsql.c  switch_rtp.c
src/ftmod/ftmod_analog/: ftmod_analog.c
src/ftmod/ftmod_gsm/: ftmod_gsm.c
src/ftmod/ftmod_r2/: ftmod_r2.c
src/ftmod/ftmod_sangoma_isdn/: ftmod_sangoma_isdn.c  ftmod_sangoma_isdn.h  ftmod_sangoma_isdn_cfg.c  ftmod_sangoma_isdn_cntrl.c  ftmod_sangoma_isdn_stack_cfg.c  ftmod_sangoma_isdn_stack_cntrl.c  ftmod_sangoma_isdn_stack_hndl.c  ftmod_sangoma_isdn_stack_out.c  ftmod_sangoma_isdn_stack_rcv.c  ftmod_sangoma_isdn_support.c  ftmod_sangoma_isdn_trace.c  ftmod_sangoma_isdn_trace.h  ftmod_sangoma_isdn_transfer.c  ftmod_sangoma_isdn_user.h  lawful-interception.asn1
src/ftmod/ftmod_sangoma_isdn_tap/: ftmod_sangoma_isdn_bidir_tap.c  ftmod_sangoma_isdn_tap.2010.vcxproj  ftmod_sangoma_isdn_tap.2010.vcxproj.filters  ftmod_sangoma_isdn_tap.c  ftmod_sangoma_isdn_tap.h
src/ftmod/ftmod_sangoma_isup_tap/: ftmod_sangoma_isup_tap.2010.vcxproj  ftmod_sangoma_isup_tap.2010.vcxproj.filters  ftmod_sangoma_isup_tap.c  ftmod_sangoma_isup_tap.h
src/ftmod/ftmod_sangoma_ss7/: ftmod_sangoma_ss7_acc.c  ftmod_sangoma_ss7_cfg.c  ftmod_sangoma_ss7_cli.c  ftmod_sangoma_ss7_cntrl.c  ftmod_sangoma_ss7_handle.c  ftmod_sangoma_ss7_in.c  ftmod_sangoma_ss7_io.c  ftmod_sangoma_ss7_logger.c  ftmod_sangoma_ss7_m2ua.c  ftmod_sangoma_ss7_m2ua.h  ftmod_sangoma_ss7_m2ua_xml.c  ftmod_sangoma_ss7_m3ua.c  ftmod_sangoma_ss7_m3ua.h  ftmod_sangoma_ss7_m3ua_xml.c  ftmod_sangoma_ss7_main.c  ftmod_sangoma_ss7_main.h  ftmod_sangoma_ss7_mtp2api.c  ftmod_sangoma_ss7_mtp2api.h  ftmod_sangoma_ss7_out.c  ftmod_sangoma_ss7_relay.c  ftmod_sangoma_ss7_sctp.c  ftmod_sangoma_ss7_sctp.h  ftmod_sangoma_ss7_sta.c  ftmod_sangoma_ss7_sts.c  ftmod_sangoma_ss7_support.c  ftmod_sangoma_ss7_timers.c  ftmod_sangoma_ss7_xml.c
src/ftmod/ftmod_wanpipe/: ftmod_wanpipe.c  ftmod_wanpipe_defines.h
src/include/: freetdm.h  ftdm_declare.h  switch.h  switch_apr.h  switch_atomic.h  switch_core.h  switch_core_media.h  switch_core_video.h  switch_limit.h  switch_list.h  switch_module_interfaces.h  switch_msrp.h  switch_pgsql.h  switch_rtp.h  switch_types.h
src/include/private/: ftdm_core.h  ftdm_types.h
src/mod/endpoints/mod_baresip/: Makefile.am  baresip_config.c  baresip_profile.c  mod_baresip.c  mod_baresip.h
src/mod/endpoints/mod_ooh323/: .gitignore  Makefile  Makefile.am  h323_glue.c  mod_ooh323.2008.vcproj  mod_ooh323.2010.vcxproj  mod_ooh323.2012.vcxproj  mod_ooh323.2012.vcxproj.filters  mod_ooh323.c  mod_ooh323.h
src/mod/endpoints/mod_ooh323/conf/autoload_configs/: ooh323.conf.xml
src/mod/formats/mod_aes_wav/: Makefile.am  TODO.txt  mod_aes_wav.c  mod_aes_wav.h  music.aes_wav.txt
tests/calls/: .gitignore  calls.mk  fs_shutdown.sh  invite_invalid_ext.c  invite_invalid_headers.c  invite_invalid_sdp.c  invite_simple.c  ua_register.c
tests/unit/: .gitignore  switch_event.c  switch_hash.c  unit.mk
(+134 files in other folders)
